Fix text alignment in footer

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -13,7 +13,4 @@
     text-align: center;
     margin-top: 70px;
     padding: 30px 0;
-    ul {
-      list-style-type: none;
-    }
   }
